test(presenter): add test to presenter